# recoverx-cli

./: .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: architecture.md  forensic-workflows.md  issues.md  plugins.md  quickstart.md
examples/: benchmark_scan.py  forensic_timeline.py  plugin_example.py  recover_deleted_jpgs.py  scan_benchmark.py  targeted_png_recovery.py  usb_recovery.py
src/recoverx/: __init__.py
src/recoverx/cli/: main.py
src/recoverx/cli/commands/: cases.py  devices.py  fat32.py  forensic.py  info.py  ntfs.py  plugins.py  scan.py  sources.py
src/recoverx/core/acquisition/: __init__.py  sessions.py  streams.py  targets.py  transport.py
src/recoverx/core/analyzers/: __init__.py  base.py  duplicate_activity.py  mass_delete.py  orphan_artifact.py  suspicious_rename.py  timestamp_anomaly.py
src/recoverx/core/artifacts/: __init__.py  models.py
src/recoverx/core/benchmark/: advanced_benchmark.py  profiler.py
src/recoverx/core/carving/: __init__.py  base.py  bmp.py  gif.py  jpg.py  pdf.py  png.py  signatures.py  streaming.py
src/recoverx/core/cases/: __init__.py  cases.py  models.py
src/recoverx/core/correlation/: __init__.py  anomalies.py  chains.py  engine.py  graph.py  heuristics.py  scoring.py
src/recoverx/core/disk/: detector.py
src/recoverx/core/query/: ast.py  (+5 more)
src/recoverx/plugins/: __init__.py  base.py  interfaces.py  lifecycle.py  loader.py  registry.py
tests/: conftest.py  create_sample.py  fixture_plugins.py  test_advanced_benchmark.py  test_bmp_carver.py  test_cli_commands.py  test_fat32_boot_sector.py  test_fat32_cli.py  test_fat32_directory.py  test_fat32_fat_table.py  test_fat32_integration.py  test_fat32_recovery.py  test_filesystem_detector.py  test_forensic_acquisition.py  test_forensic_analyzers.py  test_forensic_cases.py  test_forensic_correlation_advanced.py  test_forensic_correlation_v2.py  test_forensic_distributed.py  test_forensic_events.py  test_forensic_export.py  test_forensic_graph.py  test_forensic_indexing.py  test_forensic_logfile.py  test_forensic_optimizer.py  test_forensic_performance.py  test_forensic_plugins.py  test_forensic_query.py  test_forensic_reporting.py  test_forensic_usn.py  test_gif_carver.py  test_hash_database.py  test_hashing.py  test_jpg_carver.py  test_json_report.py  test_mmap_scanner.py  test_ntfs_attributes.py  test_ntfs_boot_sector.py  test_ntfs_mft.py  test_ntfs_non_resident.py  (+9 more)
tests/datasets/: create_stress_images.py
tests/fat32/: create_fat32_image.py
tests/fuzz/: test_distributed_fuzz.py  test_fat32_fuzz.py  test_logfile_fuzz.py  test_ntfs_fuzz.py  test_plugin_fuzz.py  test_query_fuzz.py  test_query_optimizer_fuzz.py  test_usn_fuzz.py
tests/ntfs/: create_ntfs_image.py
tests/ntfs/datasets/: create_ntfs_stress.py
tests/validation/: test_recovery_quality.py
(+82 files in other folders)
